Fixed duplication of properties in the View using styles

--- a/View/Menu/Blocks/PolygonBasedBlock/Condition/ConditionBlockView.xaml
+++ b/View/Menu/Blocks/PolygonBasedBlock/Condition/ConditionBlockView.xaml
@@ -3,27 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:flowchart_editor="clr-namespace:Flowchart_Editor"
+             d:DataContext="{d:DesignInstance Type=flowchart_editor:BlockViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Canvas
             Style="{StaticResource CanvasStyle}">
-        
             <Polygon 
-                Points="0 30 70 60 140 30 70 0 0 30" 
-                Canvas.Top="10"
+                Points="0 30 70 60 140 30 70 0 0 30"
                 Fill="#FF60B2D3" />
 
             <TextBlock 
-                Text="Условие"
-                FontSize="12" 
-                Foreground="White" 
-                Width="70"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                TextAlignment="Center"
-                Canvas.Top="30"
-                Canvas.Left="35" />
+                Style="{StaticResource TextBlockStyle}"
+                Text="Условие"/>
         </Canvas>
     </Grid>
 </UserControl>
