--- a/App.xaml
+++ b/App.xaml
@@ -1,6 +1,6 @@
 ﻿<Application x:Class="Flowchart_Editor.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              StartupUri="View/Menu/Edblock.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -26,6 +26,7 @@
             </Style>
 
             <Style x:Key="TextBlockStyle" TargetType="TextBlock">
+                <Setter Property="Width" Value="140"/>
                 <Setter Property="Height" Value="20"/>
                 <Setter Property="FontSize" Value="12"/>
                 <Setter Property="Canvas.Top" Value="20"/>
@@ -33,6 +34,31 @@
                 <Setter Property="TextAlignment" Value="Center"/>
             </Style>
 
+            <Style x:Key="PackIconStyle" TargetType="materialDesign:PackIcon">
+                <Setter Property="Height" Value="25"/>
+                <Setter Property="Width" Value="25"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+            </Style>
+
+            <Style x:Key="LabelBlockStyle" TargetType="Label" BasedOn="{StaticResource MaterialDesignLabel}">
+                <Setter Property="FontSize" Value="10"/>
+                <Setter Property="HorizontalAlignment" Value="Center"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+            </Style>
+
+            <Style x:Key="ButtonAddCondition" TargetType="Button" BasedOn="{StaticResource MaterialDesignRaisedButton}">
+                <Setter Property="Foreground" Value="White"/>
+                <Setter Property="Width" Value="120"/>
+            </Style>
+
+            <Style x:Key="ButtonOpenCloseStyle" TargetType="Button" BasedOn="{StaticResource MaterialDesignRaisedButton}">
+                <Setter Property="Background" Value="{x:Null}"/>
+                <Setter Property="BorderBrush" Value="{x:Null}"/>
+                <Setter Property="Width" Value="40"/>
+                <Setter Property="Height" Value="40"/>
+                <Setter Property="Padding" Value="0"/>
+            </Style>
+            
         </ResourceDictionary>
     </Application.Resources>
 </Application>
