--- a/View/Menu/Blocks/Link/LinkBlockView.xaml
+++ b/View/Menu/Blocks/Link/LinkBlockView.xaml
@@ -2,17 +2,23 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:flowchart_editor="clr-namespace:Flowchart_Editor" 
+             d:DataContext="{d:DesignInstance Type=flowchart_editor:BlockViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Canvas>
+        <Canvas 
+            Style="{StaticResource CanvasStyle}">
             <Ellipse
-                Canvas.Top="25"
-                Canvas.Left="60"
+                Canvas.Left="40"
                 Fill="#5761A8"
-                Width="30" 
-                Height="30"/>
+                Width="60" 
+                Height="60"/>
+            
+            <TextBlock
+                Style="{StaticResource TextBlockStyle}"
+                Text="Ссылка" />
         </Canvas>
     </Grid>
 </UserControl>
