--- a/View/Menu/Blocks/PolygonBasedBlock/InputOutput/InputOutputBlockView.xaml
+++ b/View/Menu/Blocks/PolygonBasedBlock/InputOutput/InputOutputBlockView.xaml
@@ -3,23 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:flowchart_editor="clr-namespace:Flowchart_Editor" 
+             d:DataContext="{d:DesignInstance Type=flowchart_editor:BlockViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Canvas>
+        <Canvas 
+            Style="{StaticResource CanvasStyle}">
             <Polygon  
                 Points="20 0 0 60 120 60 140 0"
-                Canvas.Top="5"
                 Fill="#FF008080"/>
 
             <TextBlock 
-                Text="Ввод/Вывод" 
-                FontSize="12" 
-                Foreground="White" 
-                Width="140" 
-                Height="20" 
-                TextAlignment="Center"
-                Canvas.Top="25" />
+                Style="{StaticResource TextBlockStyle}"
+                Text="Ввод/Вывод"/>
         </Canvas>
     </Grid>
 </UserControl>
