--- a/View/Menu/Blocks/StartEnd/StartEndBlockView.xaml
+++ b/View/Menu/Blocks/StartEnd/StartEndBlockView.xaml
@@ -3,10 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:flowchart_editor="clr-namespace:Flowchart_Editor" 
+             d:DataContext="{d:DesignInstance Type=flowchart_editor:BlockViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Canvas>
+        <Canvas 
+            Style="{StaticResource CanvasStyle}">
             <Rectangle 
                 Width="140" 
                 Height="60" 
@@ -14,14 +17,9 @@
                 RadiusX="20" 
                 RadiusY="20" />
 
-            <TextBlock 
-                Text="Ввод/Вывод" 
-                FontSize="12" 
-                Foreground="White" 
-                Width="140" 
-                Height="20" 
-                TextAlignment="Center"
-                Canvas.Top="20"/>
+            <TextBlock
+                Style="{StaticResource TextBlockStyle}"
+                Text="Ввод/Вывод" />
         </Canvas>
     </Grid>
 </UserControl>
