--- a/View/Menu/Edblock.xaml
+++ b/View/Menu/Edblock.xaml
@@ -13,40 +13,6 @@
         Height="1200" 
         Width="1820">
     <Window.Resources>
-        
-        <Style x:Key="StyleStackPanel" TargetType="StackPanel">
-            <Style.Triggers>
-                <DataTrigger Binding="{Binding ElementName=styleTheme, Path=IsChecked}" Value="True">
-                    <Setter Property="Background" Value="#212121" /> 
-                </DataTrigger>
-                <DataTrigger Binding="{Binding ElementName=styleTheme, Path=IsChecked}" Value="False">
-                    <Setter Property="Background" Value="#f5f5f5" />
-                </DataTrigger>
-            </Style.Triggers>
-        </Style>
-        
-        <Style x:Key="StyleGridMenu" TargetType="Grid">
-            <Style.Triggers>
-                <DataTrigger Binding="{Binding ElementName=styleTheme, Path=IsChecked}" Value="True">
-                    <Setter Property="Background" Value="#212121" />
-                </DataTrigger>
-                <DataTrigger Binding="{Binding ElementName=styleTheme, Path=IsChecked}" Value="False">
-                    <Setter Property="Background" Value="#f5f5f5" />
-                </DataTrigger>
-            </Style.Triggers>
-        </Style>
-        
-        <Style x:Key="StyleCanvasEditField" TargetType="Canvas">
-            <Style.Triggers>
-                <DataTrigger Binding="{Binding ElementName=styleTheme, Path=IsChecked}" Value="True">
-                    <Setter Property="Background" Value="#1c1c1c" />
-                </DataTrigger>
-                <DataTrigger Binding="{Binding ElementName=styleTheme, Path=IsChecked}" Value="False">
-                    <Setter Property="Background" Value="#FFF9F9FB" />
-                </DataTrigger>
-            </Style.Triggers>
-        </Style>
-        
         <Storyboard x:Key="CloseMenu">
             <DoubleAnimationUsingKeyFrames 
                 Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" 
@@ -82,12 +48,13 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <ToolBarTray 
+        <ToolBarTray
+            Background="White"
             Grid.ColumnSpan="2" 
             Grid.Row="0">
             <ToolBar
+                Background="White"
                 ClipToBounds="False">
-
                 <toolBar:ListFontFamily/>
                 <Separator/>
 
@@ -105,8 +72,6 @@
 
                 <toolBar:ListHeightBlock/>
                 <Separator />
-
-                <TextBox Name="Test" Width="150"/>
 
                 <materialDesign:PopupBox 
                     StaysOpen="True">
