--- a/View/СontrolStyle/СontrolsStyle.xaml
+++ b/View/СontrolStyle/СontrolsStyle.xaml
@@ -8,9 +8,9 @@
     </Style>
 
     <Style x:Key="HighlightedEllipseStyle" TargetType="Ellipse">
-        <Setter Property="Fill" Value="Red"/>
-        <Setter Property="Height" Value="8"/>
-        <Setter Property="Width" Value="8"/>
+        <Setter Property="Fill" Value="Aqua"/>
+        <Setter Property="Height" Value="6"/>
+        <Setter Property="Width" Value="6"/>
     </Style>
 
     <Style x:Key="TextBlockStyle" TargetType="TextBlock">
