--- a/View/Menu/Edblock.xaml
+++ b/View/Menu/Edblock.xaml
@@ -86,6 +86,8 @@
                 <toolBar:ListHeightBlock/>
                 <Separator />
 
+                <TextBlock Width="150" Height="30" Text="{Binding Left}" Name="Coordinate"/>
+
                 <materialDesign:PopupBox 
                     StaysOpen="True">
                     <Grid Margin="10">
@@ -197,6 +199,7 @@
             Grid.Column="1"
             HorizontalScrollBarVisibility="Auto">
             <Canvas
+                Width="1780"
                 MouseMove="editField_MouseMove"
                 AllowDrop="True" 
                 DragOver="DragOverDestination" 
